--- a/AroundTheMetro/View/Base.lproj/Main.storyboard
+++ b/AroundTheMetro/View/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tik-zL-2E1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2274" y="-398"/>
+            <point key="canvasLocation" x="2344" y="-326"/>
         </scene>
         <!--City-->
         <scene sceneID="6V0-CR-73C">
@@ -183,7 +183,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YO6-Sl-xHL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3551.1999999999998" y="-1004.3478260869566"/>
+            <point key="canvasLocation" x="4808" y="-326"/>
         </scene>
         <!--Item-->
         <scene sceneID="Y8t-NV-VCX">
@@ -200,7 +200,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rdM-1k-p9U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3686" y="-4"/>
+            <point key="canvasLocation" x="3167" y="-326"/>
         </scene>
         <!--Home-->
         <scene sceneID="UUv-SJ-5Pe">
@@ -353,7 +353,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="haR-LA-pZc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6855.1999999999998" y="-385.45727136431788"/>
+            <point key="canvasLocation" x="4808" y="-1067"/>
         </scene>
         <!--Content Nav Controller-->
         <scene sceneID="OfG-62-tbd">
@@ -371,7 +371,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Aw4-F5-gsJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5767.1999999999998" y="-385.45727136431788"/>
+            <point key="canvasLocation" x="4035" y="-1066"/>
         </scene>
         <!--Share View Controller-->
         <scene sceneID="nz9-e0-qXD">
@@ -448,7 +448,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EdD-Xj-Kaa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6524" y="-1143"/>
+            <point key="canvasLocation" x="4808" y="-1821"/>
         </scene>
         <!--Left Menu View Controller-->
         <scene sceneID="5fF-Ph-pfK">
@@ -464,7 +464,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r52-JW-1ku" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5506" y="-1110"/>
+            <point key="canvasLocation" x="3167" y="-1066"/>
         </scene>
         <!--Metro Plan View Controller-->
         <scene sceneID="zOj-kc-P3w">
@@ -507,7 +507,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hYJ-Eg-dXk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7292" y="-1110.4947526236883"/>
+            <point key="canvasLocation" x="5738" y="-1065"/>
         </scene>
         <!--Rent Form View Controller-->
         <scene sceneID="pvf-wC-3rH">
@@ -551,7 +551,45 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iQp-If-jLy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5270" y="-1934"/>
+            <point key="canvasLocation" x="5739" y="-1821"/>
+        </scene>
+        <!--Locate Metro View Controller-->
+        <scene sceneID="hy2-TF-uKl">
+            <objects>
+                <viewController storyboardIdentifier="locateMetroViewController" id="yBD-qF-xvr" customClass="LocateMetroViewController" customModule="AroundTheMetro" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1b3-Wu-doZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PSg-OX-wMh">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </mapView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No data for this city" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="To7-B0-KnW">
+                                <rect key="frame" x="85" y="273.5" width="150" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="PSg-OX-wMh" firstAttribute="leading" secondItem="yLx-Jf-C45" secondAttribute="leading" id="B31-qt-Y2J"/>
+                            <constraint firstItem="PSg-OX-wMh" firstAttribute="bottom" secondItem="yLx-Jf-C45" secondAttribute="bottom" id="Kix-4I-5Pa"/>
+                            <constraint firstItem="PSg-OX-wMh" firstAttribute="trailing" secondItem="yLx-Jf-C45" secondAttribute="trailing" id="MiE-Sm-8h0"/>
+                            <constraint firstItem="To7-B0-KnW" firstAttribute="centerX" secondItem="1b3-Wu-doZ" secondAttribute="centerX" id="VjM-oq-uoW"/>
+                            <constraint firstItem="PSg-OX-wMh" firstAttribute="top" secondItem="yLx-Jf-C45" secondAttribute="top" id="h3E-Zq-kzI"/>
+                            <constraint firstItem="To7-B0-KnW" firstAttribute="centerY" secondItem="1b3-Wu-doZ" secondAttribute="centerY" id="xBV-mW-rRs"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yLx-Jf-C45"/>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="PSg-OX-wMh" id="L1R-za-1ua"/>
+                        <outlet property="noDataLabel" destination="To7-B0-KnW" id="bmC-6v-pxy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7f5-Y1-Yyv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5737.5" y="-2548.9436619718308"/>
         </scene>
         <!--List View Controller-->
         <scene sceneID="7OG-Hz-5DS">
@@ -608,7 +646,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YiS-R0-xus" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8231.2000000000007" y="-385.45727136431788"/>
+            <point key="canvasLocation" x="5738" y="1115"/>
         </scene>
         <!--Places View Controller-->
         <scene sceneID="NMx-aZ-qSe">
@@ -623,7 +661,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N8z-CF-x65" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1980" y="611"/>
+            <point key="canvasLocation" x="5738" y="-326"/>
         </scene>
         <!--Place List View Controller-->
         <scene sceneID="HRh-4V-N9W">
@@ -655,13 +693,13 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Mrg-cL-pAN">
                                                     <rect key="frame" x="87" y="16.5" width="263" height="42.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5AN-OI-zNW">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5AN-OI-zNW">
                                                             <rect key="frame" x="0.0" y="0.0" width="263" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRD-Qe-XaB">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRD-Qe-XaB">
                                                             <rect key="frame" x="0.0" y="25.5" width="263" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -697,7 +735,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9D2-ZC-UIs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2990" y="394"/>
+            <point key="canvasLocation" x="6690" y="-326"/>
         </scene>
         <!--Metro View Controller-->
         <scene sceneID="d7v-VC-168">
@@ -767,7 +805,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="igS-qa-XOE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2990" y="1091"/>
+            <point key="canvasLocation" x="5738" y="393"/>
         </scene>
         <!--Place Detail View Controller-->
         <scene sceneID="oUr-Ez-wMi">
@@ -893,7 +931,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ryA-AS-ItF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3929" y="725"/>
+            <point key="canvasLocation" x="7538" y="-326"/>
         </scene>
         <!--Profile-->
         <scene sceneID="zJB-go-yQ1">
@@ -1034,7 +1072,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1gP-bK-0ct" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2056.875" y="-1888.7323943661972"/>
+            <point key="canvasLocation" x="4808" y="-3282"/>
         </scene>
         <!--Contact-->
         <scene sceneID="NRK-Ia-QB7">
@@ -1173,7 +1211,7 @@ Find everything you need in a short walking distance from any metro system in th
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ewk-Am-pAG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2990" y="-1821"/>
+            <point key="canvasLocation" x="4808" y="-2547"/>
         </scene>
     </scenes>
     <resources>
